# arxiv-metadata-service

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
arxiv_meta/: __init__.py  cli.py  config.py  data.py  mcp_server.py  search.py  server.py
arxiv_metadata_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: boolean-backend-spec.md  boolean-backend-tasks.md
scripts/: benchmark_candidates.py
tests/: conftest.py  test_api.py  test_data_import.py  test_search.py  test_security_regressions.py
tests/boolean_backend/: test_boolean_backend.py  test_boolean_cli.py
tests/fixtures/: arxiv_sample.jsonl
tests/fixtures/boolean_backend/: arxiv_boolean_sample.jsonl
