[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-metadata-service"
version = "0.2.0"
description = "Local arXiv full metadata retrieval service — Kaggle data + SQLite FTS5 + FastAPI"
authors = [
    {name = "Li Shen"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["arxiv", "metadata", "search", "fts5", "fastapi", "kaggle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "requests>=2.28",
    "pyyaml>=6.0",
    "hfpclawer[arxiv] @ file:///home/lishen/Gitlab/Agentic4Sci/hfpapers-crawler",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest>=7.0",
    "httpx>=0.27",
]
# kaggle dependency provided by hfpclawer[arxiv]

[project.scripts]
arxiv-meta = "arxiv_meta.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["arxiv_meta*"]
