[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-metadata-service"
version = "0.2.0"
description = "Local arXiv full metadata retrieval service — SQLite FTS5 full-text search + FastAPI REST API + MCP server (2.69 million papers)"
authors = [
    {name = "Li Shen"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["arxiv", "metadata", "fts5", "sqlite", "fastapi", "mcp", "paper-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "pyyaml>=6.0",
    "typer>=0.9",
    "fastapi>=0.133.0",
    "uvicorn[standard]>=0.20",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/diamond2nv/arxiv-metadata-service"
Repository = "https://github.com/diamond2nv/arxiv-metadata-service"
Documentation = "https://github.com/diamond2nv/arxiv-metadata-service"

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
dev = [
    "arxiv-metadata-service[mcp]",
    "ruff",
    "pytest>=7.0",
]

[project.scripts]
arxiv-meta = "arxiv_meta.cli:app"

[tool.setuptools.packages.find]
include = ["arxiv_meta*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]
ignore = ["E501"]
