[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-metadata-service"
version = "1.0.0"
description = "Local-only arXiv metadata query service over a SQLite title FTS5 index"
authors = [
    {name = "Li Shen"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.13"
keywords = ["arxiv", "metadata", "fts5", "sqlite", "fastapi", "paper-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "fastapi>=0.133.0",
    "pydantic>=2.4.0",
    "pyyaml>=6.0.0",
    "starlette>=1.0.1",
    "typer>=0.12.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/diamond2nv/arxiv-metadata-service"
Repository = "https://github.com/diamond2nv/arxiv-metadata-service"
Documentation = "https://github.com/diamond2nv/arxiv-metadata-service"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[project.scripts]
arxiv-meta = "arxiv_meta.cli:app"

[tool.setuptools.packages.find]
include = ["arxiv_meta*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]
ignore = ["E501"]
